--- a/package.json
+++ b/package.json
@@ -1,41 +1,29 @@
 {
-    "name": "application-name",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-      "body-parser"    : "^1.0.2",
-      "errorhandler"   : "^1.4.1",
-      "express"        : "~4.1.1",
-      "jade"           : "~0.31.2",
-      "method-override": "^1.0.0",
-      "morgan"         : "^1.0.0",
-      "jquery"         : "~2.1.0"
+  "name": "application-name",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "body-parser": "^1.0.2",
+    "errorhandler": "^1.4.1",
+    "express": "~4.1.1",
+    "jade": "~0.31.2",
+    "jquery": "~2.1.0",
+    "method-override": "^1.0.0",
+    "morgan": "^1.0.0"
   },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browserify-shim": {
-    "plugin": {
-      "exports": "plugin",
-      "denpends": [
-        "jquery:$"
-      ]
-    }
+  "scripts": {
+    "build": "gulp build-js & gulp build-css & gulp build-img"
   },
   "devDependencies": {
-    "browser-sync": "~2.2.2",
-    "browserify": "^9.0.3",
-    "browserify-shim": "^3.8.2",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-changed": "^1.1.1",
-    "gulp-minify-css": "~0.5.1",
-    "gulp-sass": "~1.3.3",
-    "gulp-sourcemaps": "^1.5.0",
-    "gulp-uglify": "^1.1.0",
-    "vinyl-source-stream": "~1.0.0",
-    "watchify": "^2.4.0"
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^1.12.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.4.2",
+    "imagemin-pngquant": "^4.2.0",
+    "jshint-stylish": "^2.1.0"
   }
 }
